--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
 
-    <title>:: Dance Evolution :: A Dance Company</title>
+    <title>Dance Evolution</title>
 
 
     <!-- style -->
@@ -886,11 +886,11 @@
 
                         <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 
-                        <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                        <a href="https://www.facebook.com/groups/513507082044070/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
 
                         <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 
-                        
+
 
                     </section>
 
