changed hover color

--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 
+<!--
+TO DO:
+  -make logo bigger but then small again when scrolling
+  -fix <map>
+  -eliminate the need for coding (revolutionary)
+  </map>
+  -change home <picture>
+  -1. group Class 2. Comp Schedule 3. Fb Group Page
+  </picture>
+
+
+-->
 <html lang="en">
 
   <head>
@@ -68,7 +80,7 @@
                             <h1>
 
 
-                                <a href="#headere-top" title="Rooky"><img src="images/logo.png" alt="Rooky" title="Rooky" style="width:3em; height:3em;"/></a>
+                                <a href="#headere-top" id = "danceEvolutionLogo" title="Rooky"><img src="images/logo.png" alt="Rooky" title="Rooky" style="width:5em; height:5em;"/></a>
 
                             </h1>
 
@@ -254,36 +266,36 @@
 
 
 
-                            <section class="col-xs-12 col-sm-6 col-md-3">
-
+                            <section class="col-xs-12 col-sm-4 col-md-4">
+                              <!-- PICTURE
                             	<figure><i class="fa fa-rocket" aria-hidden="true"></i></figure>
-
-                            	<h5>STARTUP FEATURE</h5>
+                              -->
+                            	<h5>GROUP CLASSES</h5>
 
                                 <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo orta felis euismod semper.</p>
 
                             </section>
 
-                            <section class="col-xs-12 col-sm-6 col-md-3">
-
+                            <section class="col-xs-12 col-sm-4 col-md-4">
+                              <!-- PICTURE
                             	<figure><i class="fa fa-magic" aria-hidden="true"></i></figure>
-
-                            	<h5>Higly customizable</h5>
+                            -->
+                            	<h5>COMPETITION SCHEDULES</h5>
 
                                 <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo orta felis euismod semper.</p>
 
                             </section>
 
-                            <section class="col-xs-12 col-sm-6 col-md-3">
-
+                            <section class="col-xs-12 col-sm-4 col-md-4">
+                              <!-- PICTURE
                             	<figure><i class="fa fa-paper-plane" aria-hidden="true"></i></figure>
-
-                            	<h5>Simplified workflow</h5>
+                              -->
+                            	<h5>FACEBOOK GROUP PAGE</h5>
 
                                 <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo orta felis euismod semper.</p>
 
                             </section>
-
+                            <!--
                             <section class="col-xs-12 col-sm-6 col-md-3">
 
                             	<figure><i class="fa fa-television" aria-hidden="true"></i></figure>
@@ -293,6 +305,7 @@
                                 <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo orta felis euismod semper.</p>
 
                             </section>
+                          -->
 
 
 
