--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ TO DO:
                             <h1>
 
 
-                                <a href="#headere-top" id = "danceEvolutionLogo" title="Rooky"><img src="images/logo.png" alt="Rooky" title="Rooky" style="width:5em; height:5em;"/></a>
+                                <a href="#headere-top" id = "danceEvolutionLogo" title="Rooky"><img src="images/logo.png" alt="Rooky" title="Rooky" style="width:3em; height:3em;"/></a>
 
                             </h1>
 
@@ -252,18 +252,17 @@ TO DO:
 
                     <article>
 
-                    	<p style="text-align: justify; text-justify: inter-word;" >Come experience the best Dancesport youth training in the NJ and NYC region. We understand that searching for the right fit
-                        for developing great dancers at any age is a big decision, we here at Dance Evolution want to make the choice an easy one.
-                        Since 2013 Inna and the Dance Evolution studio have developed an excellent team of instructors that continue to grow and produce beautiful champion dancers. From the first day a dancer starts at our studio until the end we aim at promoting every individuals core talents and strengths. We train cooperation among peers, strong team building skills, and respect for the discipline and art of dance. We offer training in various styles of competitive Ballroom Dancesport and we know you'll find a great home here at our studio. We welcome your visit to our studio. </p>
+                    	<p style="text-align: justify; text-justify: inter-word;" >
+                        Come experience the best Dancesport youth training club in the NJ and NYC region. We understand that searching for the right type of club that’s fit for developing great dancers at any age is a big decision. We here at Dance Evolution want to make the choice an easy one. Since 2013, Inna and the Dance Evolution team have developed an excellent team of instructors that continue to grow and produce beautiful champion dancers. From the first day a dancer starts at our studio until the last, we aim to promote every individual's core talents and strengths. We value cooperation among peers, strong team building skills, and respect for the discipline and art of dance. We offer training in various styles of competitive Ballroom Dancesport and we know you'll find a great home here at our studio. We welcome your visit.
+                      </p>
 
                     </article>
 
 
 
-                    <!-- four boxes  -->
+                    <!-- three boxes  -->
 
                     	<div class="row four-box-pan" role="four-box">
-
 
 
                             <section class="col-xs-12 col-sm-4 col-md-4">
@@ -272,7 +271,7 @@ TO DO:
                               -->
                             	<h5>GROUP CLASSES</h5>
 
-                                <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo orta felis euismod semper.</p>
+                                <p></p>
 
                             </section>
 
@@ -282,7 +281,7 @@ TO DO:
                             -->
                             	<h5>COMPETITION SCHEDULES</h5>
 
-                                <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo orta felis euismod semper.</p>
+                                <p></p>
 
                             </section>
 
@@ -292,7 +291,7 @@ TO DO:
                               -->
                             	<h5>FACEBOOK GROUP PAGE</h5>
 
-                                <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo orta felis euismod semper.</p>
+                                <p></p>
 
                             </section>
                             <!--
@@ -337,20 +336,29 @@ TO DO:
 
                     	<article>
 
-                        	<h2>Get Maximum benefits by working with our experts.</h2>
+                        	<h2>Benefits of Dance</h2>
 
-                            <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo orta felis euismod semper.Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo orta felis euismod semper.</p>
+                            <p></p>
 
                             <ul>
 
-                                <li>Maecenas sed diam eget risus varius </li>
+                                <li>Self Confidence</li>
 
-                                <li>orta felis euismod semper.Maecenas sed diam </li>
+                                <li>Team Collaboration</li>
 
-                                <li>amet non magna. Morbi leo orta semper.</li>
+                                <li>Improvement in Memory</li>
 
-                                <li>Maecenas sed diam eget risus</li>
+                                <li>Strengthened Neuron Connectivity</li>
 
+                                <li>Increase in Self Worth</li>
+
+                                <li>Sportsmanship</li>
+
+
+
+                                <!--
+                                <li>Studies using PET imaging have identified regions of the brain that contribute to dance learning and performance including the motor cortex, somatosensory cortex, basal ganglia, and cerebellum.</li>
+                                -->
                             </ul>
 
                         </article>
@@ -383,11 +391,11 @@ TO DO:
 
                     	<article>
 
-                    		<h2>We even give you more than your expectation</h2>
+                    		<h2>Testimonials</h2>
 
-                            <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo orta felis euismod semper.Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo orta felis euismod semper.Maecenas sed diam eget risus varius blandit sit amet non magna. </p>
+                            <p>"Testimonial 1 here" - Maya Shtern</p>
 
-                            <p>Morbi leo orta felis euismod semper.Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo orta felis euismod semper.Morbi leo orta felis euismod semper.Maecenas sed diam eget risus varius.</p>
+                            <p>"Testimonial 2" - person 2</p>
 
                         </article>
 
@@ -550,10 +558,10 @@ TO DO:
 
                 	<header role="title-page" class="text-center">
 
-                    	<h4>Flexible Plans</h4>
-
-                        <h2>Select the plan that suits you. Upgrade,<br/> downgrade, or cancel anytime.</h2>
-
+                    	<h4>Dance Evolution Club Programs</h4>
+                      <!--
+                        <h2>We offer 3 main programs<br/></h2>
+                      -->
                     </header>
 
                     <!-- pricing -->
@@ -562,15 +570,37 @@ TO DO:
 
                     	<section>
 
-                        	<header><h4>Bronze</h4></header>
+                        	<header><h4>Hobby</h4></header>
 
-                            <h2><span>$10</span> /mo</h2>
+                            <h2><span>1 time</span> /wk</h2>
 
                             <ul>
 
+                                <li>Fun</li>
 
+                                <li>Social</li>
 
-                                <li>Beginner Level Classes</li>
+                                <li>Not Competitively Intensive</li>
+
+                            </ul>
+
+                            <input name="" type="button" value="get started">
+
+                        </section>
+
+                        <section>
+
+                        	<header><h4>Competitive</h4></header>
+
+                            <h2><span>2-3 times</span> /wk</h2>
+
+                            <ul>
+
+                                <li>Competition Motivated Training</li>
+
+                                <li>Mandatory Rounds</li>
+
+                                <li>Training In and Out of Studio</li>
 
 
 
@@ -582,31 +612,18 @@ TO DO:
 
                         <section>
 
-                        	<header><h4>Silver</h4></header>
+                        	<header><h4>Global Elite</h4></header>
 
-                            <h2><span>$20</span> /mo</h2>
-
-                            <ul>
-
-                                <li>Intermediate Level Classes</li>
-
-
-
-                            </ul>
-
-                            <input name="" type="button" value="get started">
-
-                        </section>
-
-                        <section>
-
-                        	<header><h4>Gold</h4></header>
-
-                            <h2><span>$50</span> /mo</h2>
+                            <h2><span>4-6 times</span> /wk</h2>
 
                             <ul>
 
-                                <li>Advanced Level Classes</li>
+                                <li>The Elite Team</li>
+
+                                <li>For More Information, Contact Us</li>
+
+                                <li></br></li>
+
 
 
                             </ul>
@@ -656,7 +673,7 @@ TO DO:
                             	<h5>Inna Firestein</h5>
 
 								<h6>Position Here</h6>
-
+                <!--
                                 <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 
                                 <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -668,7 +685,7 @@ TO DO:
                                 <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
 
                                 <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
-
+                              -->
                             </header>
 
                         </section>
@@ -682,7 +699,7 @@ TO DO:
                             	<h5>Alex Milov</h5>
 
 								<h6>Position Here</h6>
-
+                              <!--
                                 <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 
                                 <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -694,7 +711,7 @@ TO DO:
                                 <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
 
                                 <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
-
+                              -->
                             </header>
 
                         </section>
@@ -705,10 +722,10 @@ TO DO:
 
                         	<header>
 
-                            	<h5>Other Instructor</h5>
+                            	<h5>Max Firestein</h5>
 
 								<h6>Position Here</h6>
-
+                            <!--
                                 <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 
                                 <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -720,7 +737,7 @@ TO DO:
                                 <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
 
                                 <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
-
+                              -->
                             </header>
 
                         </section>
@@ -731,10 +748,10 @@ TO DO:
 
                         	<header>
 
-                            	<h5>Another Instructor</h5>
+                            	<h5>Nicole Mtchedlidze</h5>
 
 								<h6>Position Here</h6>
-
+                  <!--
                                 <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 
                                 <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -746,7 +763,7 @@ TO DO:
                                 <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
 
                                 <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
-
+                              -->
                             </header>
 
                         </section>
@@ -770,7 +787,7 @@ TO DO:
 
 
             <!-- section-six -->
-
+            <!--
             <section class="section-six" id="section-six">
 
             	<div class="container">
@@ -783,7 +800,7 @@ TO DO:
 
                     </header>
 
-                    <!-- contact-form -->
+
 
                     <div class="contact-form">
 
@@ -817,23 +834,25 @@ TO DO:
 
                      </div>
 
-                    <!-- contact-form -->
+
 
                     <div class="clearfix"></div>
 
                 </div>
 
-                <!-- map -->
+              -->
 
+                <!-- map -->
+                <!--
                  <div class="map-wrapper">
 
                         <div id="surabaya"></div>
 
                     </div>
 
-                <!-- map -->
+                -->
 
-            </section>
+            <!--</section>-->
 
             <!-- section-six -->
 
@@ -853,7 +872,7 @@ TO DO:
 
                         <a href="https://www.facebook.com/groups/513507082044070/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
 
-                        <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                        <a href="https://www.instagram.com/dance.evolution.club/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 
 
 
