--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@ TO DO:
 
                                     <li><a href="#section-two" title="Features">Features</a></li>
 
-                                    <li><a href="#section-three" title="Pricing">Pricing</a></li>
+                                    <li><a href="#section-three" title="Pricing">Programs</a></li>
 
                                     <li><a href="#section-four" title="Team">Team</a></li>
-
+                                    <!--
                                     <li><a href="#section-five" title="Contact">Contact</a></li>
-
-                                    <li><a href="#section-six" title="Join Us">Join Us</a></li>
+                                  -->
+                                    <li><a href="#section-six" title="Join Us">Info</a></li>
 
                                 </ul>
 
