--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@ TO DO:
 
                     <header role="title-page" class="text-center">
 
-                        <h4>Meet The Team</h4>
+                        <h4></br>Meet The Team</h4>
 
                         <h2>Our team is passionate about bringing the <br/>best for our customers.</h2>
 
@@ -673,7 +673,7 @@ TO DO:
                             	<h5>Inna Firestein</h5>
 
 								<h6>Position Here</h6>
-                <!--
+
                                 <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 
                                 <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -685,7 +685,7 @@ TO DO:
                                 <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
 
                                 <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
-                              -->
+
                             </header>
 
                         </section>
@@ -699,7 +699,7 @@ TO DO:
                             	<h5>Alex Milov</h5>
 
 								<h6>Position Here</h6>
-                              <!--
+
                                 <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 
                                 <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -711,7 +711,7 @@ TO DO:
                                 <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
 
                                 <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
-                              -->
+
                             </header>
 
                         </section>
@@ -725,7 +725,7 @@ TO DO:
                             	<h5>Max Firestein</h5>
 
 								<h6>Position Here</h6>
-                            <!--
+
                                 <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 
                                 <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -737,7 +737,7 @@ TO DO:
                                 <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
 
                                 <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
-                              -->
+
                             </header>
 
                         </section>
@@ -751,7 +751,7 @@ TO DO:
                             	<h5>Nicole Mtchedlidze</h5>
 
 								<h6>Position Here</h6>
-                  <!--
+
                                 <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 
                                 <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -763,7 +763,7 @@ TO DO:
                                 <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
 
                                 <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
-                              -->
+
                             </header>
 
                         </section>
@@ -775,7 +775,7 @@ TO DO:
                     <!-- Team -->
 
                 </div>
-
+              </br>
             </section>
 
             <!-- section-fore -->
