--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ TO DO:
 
                     		<h2>Testimonials</h2>
 
-                            <p>"Testimonial 1 here" - Maya Shtern</p>
+                            <p>"Testimonial 1 here" - person 1</p>
 
                             <p>"Testimonial 2" - person 2</p>
 
