--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@ TO DO:
 
                     <div class="col-xs-12 col-sm-6 col-md-6">
 
-                        <figure class="row" style="background-image:url('images/sasha-dance.jpg')"></figure>
+                        <figure class="row" style="background-image:url('https://stevenmilov.github.io/images/sasha-dance.jpg')"></figure>
 
                     </div>
 
