ok now fixed picture i thinknow

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ TO DO:
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href=" https://stevenmilov.github.io/dance-evolution-club/images/logo.png" type="image/x-icon">
 
     <title>Dance Evolution</title>
 
@@ -79,7 +79,7 @@ TO DO:
                             <h1>
 
 
-                                <a href="#headere-top" id = "danceEvolutionLogo" title="Rooky"><img src="images/logo.png" alt="Rooky" title="Rooky" style="width:2em; height:2em;"/></a>
+                                <a href="#headere-top" id = "danceEvolutionLogo" title="Rooky"><img src=" https://stevenmilov.github.io/dance-evolution-club/images/logo.png" alt="Rooky" title="Rooky" style="width:2em; height:2em;"/></a>
 
                             </h1>
 
@@ -167,7 +167,7 @@ TO DO:
 
         	<figure>
 
-            	<div class="parallax-window item tp-banner-container" data-parallax="scroll" data-image-src="images/daveShelly.jpg" ></div>
+            	<div class="parallax-window item tp-banner-container" data-parallax="scroll" data-image-src=" https://stevenmilov.github.io/dance-evolution-club/images/daveShelly.jpg" ></div>
 
             </figure>
 
@@ -197,31 +197,31 @@ TO DO:
 
                         <li class="col-xs-4 col-sm-3 col-md-2 col-lg-2 ">
 
-                        	<a href="#"><img src="images/logoes/logoes-1.png" alt="" class="img-responsive"/></a>
+                        	<a href="#"><img src=" https://stevenmilov.github.io/dance-evolution-club/images/logoes/logoes-1.png" alt="" class="img-responsive"/></a>
 
                         </li>
 
                         <li class="col-xs-4 col-sm-3 col-md-2 col-lg-2">
 
-                        	<a href="#"><img src="images/logoes/logoes-2.png" alt="" class="img-responsive"/></a>
+                        	<a href="#"><img src=" https://stevenmilov.github.io/dance-evolution-club/images/logoes/logoes-2.png" alt="" class="img-responsive"/></a>
 
                         </li>
 
                         <li class="col-xs-4 col-sm-3 col-md-2 col-lg-2">
 
-                        	<a href="#"><img src="images/logoes/logoes-3.png" alt="" class="img-responsive"/></a>
+                        	<a href="#"><img src=" https://stevenmilov.github.io/dance-evolution-club/images/logoes/logoes-3.png" alt="" class="img-responsive"/></a>
 
                         </li>
 
                         <li class="col-xs-4 col-sm-3 col-md-2 col-lg-2">
 
-                        	<a href="#"><img src="images/logoes/logoes-4.png" alt="" class="img-responsive"/></a>
+                        	<a href="#"><img src=" https://stevenmilov.github.io/dance-evolution-club/images/logoes/logoes-4.png" alt="" class="img-responsive"/></a>
 
                         </li>
 
                         <li class="col-xs-4 col-sm-3 col-md-2 col-lg-2">
 
-                        	<a href="#"><img src="images/logoes/logoes-5.png" alt="" class="img-responsive"/></a>
+                        	<a href="#"><img src=" https://stevenmilov.github.io/dance-evolution-club/images/logoes/logoes-5.png" alt="" class="img-responsive"/></a>
 
                         </li>
 
@@ -510,7 +510,7 @@ TO DO:
 
                     <div class="col-xs-12 col-sm-6 col-md-6">
 
-                        <figure class="row" style="background-image:url('https://stevenmilov.github.io/dance-evolution-club/images/sasha-dance.jpg')"></figure>
+                        <figure class="row" style="background-image:url('https://stevenmilov.github.io/dance-evolution-club/ https://stevenmilov.github.io/dance-evolution-club/images/sasha-dance.jpg')"></figure>
 
                     </div>
 
@@ -526,7 +526,7 @@ TO DO:
 
                     <div class="col-xs-12 col-sm-6 col-md-6">
 
-                    	<figure class="row" style="background-image:url('images/sasha-dance.jpg')"></figure>
+                    	<figure class="row" style="background-image:url('https://stevenmilov.github.io/dance-evolution-club/ https://stevenmilov.github.io/dance-evolution-club/images/sasha-dance.jpg')"></figure>
 
                     </div>
 
@@ -815,7 +815,7 @@ TO DO:
 
                         <section class="col-xs-12 col-sm-6 col-md-4">
 
-                        	<figure><img src='images/Inna.jpg' alt="" class=" img-responsive"/></figure>
+                        	<figure><img src=' https://stevenmilov.github.io/dance-evolution-club/images/Inna.jpg' alt="" class=" img-responsive"/></figure>
 
                         	<header>
 
@@ -841,7 +841,7 @@ TO DO:
 
                         <section class="col-xs-12 col-sm-6 col-md-4">
 
-                        	<figure><img src='images/aa.jpg' alt="" class=" img-responsive"/></figure>
+                        	<figure><img src=' https://stevenmilov.github.io/dance-evolution-club/images/aa.jpg' alt="" class=" img-responsive"/></figure>
 
                         	<header>
 
@@ -869,7 +869,7 @@ TO DO:
 
                         <section class="col-xs-12 col-sm-6 col-md-4">
 
-                        	<figure><img src='images/Sasha.jpg' alt="" class=" img-responsive"/></figure>
+                        	<figure><img src=' https://stevenmilov.github.io/dance-evolution-club/images/Sasha.jpg' alt="" class=" img-responsive"/></figure>
 
                         	<header>
 
@@ -905,7 +905,7 @@ TO DO:
 
                           <section class="col-xs-12 col-sm-6 col-md-4">
 
-                          	<figure><img src='images/max.jpg' alt="" class=" img-responsive"/></figure>
+                          	<figure><img src=' https://stevenmilov.github.io/dance-evolution-club/images/max.jpg' alt="" class=" img-responsive"/></figure>
 
                           	<header>
 
@@ -931,7 +931,7 @@ TO DO:
 
                           <section class="col-xs-12 col-sm-6 col-md-4">
 
-                          	<figure><img src='images/Nika.jpg' alt="" class=" img-responsive"/></figure>
+                          	<figure><img src=' https://stevenmilov.github.io/dance-evolution-club/images/Nika.jpg' alt="" class=" img-responsive"/></figure>
 
                           	<header>
 
@@ -957,7 +957,7 @@ TO DO:
 
                           <section class="col-xs-12 col-sm-6 col-md-4">
 
-                          	<figure><img src='images/klinchiks.jpg' alt="" class=" img-responsive"/></figure>
+                          	<figure><img src=' https://stevenmilov.github.io/dance-evolution-club/images/klinchiks.jpg' alt="" class=" img-responsive"/></figure>
 
                           	<header>
 
@@ -994,7 +994,7 @@ TO DO:
 
                             <section class="col-xs-12 col-sm-6 col-md-4">
 
-                            	<figure><img src='images/Romashkina.jpg' alt="" class=" img-responsive"/></figure>
+                            	<figure><img src=' https://stevenmilov.github.io/dance-evolution-club/images/Romashkina.jpg' alt="" class=" img-responsive"/></figure>
 
                             	<header>
 
@@ -1020,7 +1020,7 @@ TO DO:
 
                             <section class="col-xs-12 col-sm-6 col-md-4">
 
-                            	<figure><img src='images/Andre.jpg' alt="" class=" img-responsive"/></figure>
+                            	<figure><img src=' https://stevenmilov.github.io/dance-evolution-club/images/Andre.jpg' alt="" class=" img-responsive"/></figure>
 
                             	<header>
 
@@ -1046,7 +1046,7 @@ TO DO:
 
                             <section class="col-xs-12 col-sm-6 col-md-4">
 
-                            	<figure><img src="images/Julz.jpg" alt="" class=" img-responsive"/></figure>
+                            	<figure><img src=" https://stevenmilov.github.io/dance-evolution-club/images/Julz.jpg" alt="" class=" img-responsive"/></figure>
 
                             	<header>
 
@@ -1080,7 +1080,7 @@ TO DO:
 
                           <section class="col-xs-12 col-sm-6 col-md-4">
 
-                            <figure><img src='images/Nastya.jpg' alt="" class=" img-responsive"/></figure>
+                            <figure><img src=' https://stevenmilov.github.io/dance-evolution-club/images/Nastya.jpg' alt="" class=" img-responsive"/></figure>
 
                             <header>
 
@@ -1107,7 +1107,7 @@ TO DO:
 
                           <section class="col-xs-12 col-sm-6 col-md-4">
 
-                            <figure><img src='images/Dave.jpg' alt="" class=" img-responsive"/></figure>
+                            <figure><img src=' https://stevenmilov.github.io/dance-evolution-club/images/Dave.jpg' alt="" class=" img-responsive"/></figure>
 
                             <header>
 
@@ -1133,7 +1133,7 @@ TO DO:
 
                           <section class="col-xs-12 col-sm-6 col-md-4">
 
-                            <figure><img src='images/Shelly.jpg' alt="" class=" img-responsive"/></figure>
+                            <figure><img src=' https://stevenmilov.github.io/dance-evolution-club/images/Shelly.jpg' alt="" class=" img-responsive"/></figure>
 
                             <header>
 
