--- a/index.html
+++ b/index.html
@@ -815,7 +815,7 @@ TO DO:
 
                         <section class="col-xs-12 col-sm-6 col-md-4">
 
-                        	<figure><img src='https://stevenmilov.github.io/dance-evolution-club/images/Inna.jpg' alt="" class=" img-responsive"/></figure>
+                        	<figure><img src=url('https://stevenmilov.github.io/dance-evolution-club/images/Inna.jpg') alt="" class=" img-responsive"/></figure>
 
                         	<header>
 
