--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ TO DO:
                       <div class="container-fluid">
                         <div class="row">
                           <div class="col-sm-5 col-md-6"></div>
-                          <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">479 N Midland Ave Saddle Brook, NJ 07663</div>
+                          <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0"><p>479 N Midland Ave Saddle Brook, NJ 07663</p></div>
                         </div>
                       </div>
                     </section
