--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ TO DO:
     <title>Dance Evolution</title>
 
 
-
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- style -->
 
     <link href="css/style.css" rel="stylesheet" type="text/css">
@@ -159,7 +159,7 @@ TO DO:
                     <br><br><br><br><br><br>
                         <div class="row">
                           <div class="col-sm-5 col-md-6"></div>
-                          <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0"><p>479 N Midland Ave Saddle Brook, NJ 07663</p></div>
+                          <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0"><i class="material-icons" style="font-size:36px">place</i><p>479 N Midland Ave Saddle Brook, NJ 07663</p></div>
                         </div>
 
 
