--- a/index.html
+++ b/index.html
@@ -155,11 +155,15 @@ TO DO:
 
                      <a  href="#" class="button-header">Get started</a>
                     -->
-
+                    <style>
+                    .nowrap {
+                      white-space: nowrap;
+                    }
+                    </style>
                     <br><br><br><br><br><br>
                         <div class="row">
                           <div class="col-sm-5 col-md-6"></div>
-                          <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0"><i class="material-icons" style="font-size:36px;color:white">place</i><p>479 N Midland Ave Saddle Brook, NJ 07663</p></div>
+                          <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0"><i class="material-icons nowrap" style="font-size:36px;color:white">place</i><p class="nowrap">479 N Midland Ave Saddle Brook, NJ 07663</p></div>
                         </div>
 
 
