--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ TO DO:
 
         	<figure>
 
-            	<div class="parallax-window item tp-banner-container" data-parallax="scroll" data-image-src="https://stevenmilov.github.io/dance-evolution-club/images/daveShelly.jpg" ></div>
+            	<div class="parallax-window item tp-banner-container" data-parallax="scroll" src="https://stevenmilov.github.io/dance-evolution-club/images/daveShelly.jpg" ></div>
 
             </figure>
 
